fix OGAM-282 : "multiline"(wrap) label for field in advanced request form
Former-commit-id: 64fdb5cacc455b09be0ab35f349791e71635e97b

--- a/website/htdocs/client/ogamDesktop/sass/src/ux/request/AdvancedRequestFieldSet.scss
+++ b/website/htdocs/client/ogamDesktop/sass/src/ux/request/AdvancedRequestFieldSet.scss
@@ -27,6 +27,7 @@
 }
 .labelNextBin span {
 	margin-top : 4px !important;
+	white-space: normal !important;
 }
 /*****************************************************************************************************/
 
